--- a/home.html
+++ b/home.html
@@ -11,7 +11,7 @@
         /* General Styling */
         body {
             font-family: 'Georgia', serif; /* Historic-style font */
-            background-image: url('../hci/images/parchment-background.jpg'); /* Parchment-style background */
+            background-image: url('images/parchment-background.jpg'); /* Parchment-style background */
             background-size: cover;
             background-attachment: fixed;
             color: #4a3c2f; /* Dark brown text for a vintage feel */
@@ -179,14 +179,14 @@
     <div class="featured-section">
         <div class="featured-card">
             <a href="figures.html" class="w3-hover-opacity">
-                <img src="../hci/images/history.webp" alt="Presidents">
+                <img src="images/history.webp" alt="Presidents">
                 <h3>Presidents</h3>
                 <p>Discover the lives and achievements of Philippine presidents.</p>
             </a>
         </div>
         <div class="featured-card">
             <a href="events.html" class="w3-hover-opacity">
-                <img src="../hci/images/Jose p laurel event.jpg" alt="Events">
+                <img src="images/Jose p laurel event.jpg" alt="Events">
                 <h3>Legacies</h3>
                 <p>Explore the legacies and contributions of each president.</p>
             </a>
