--- a/figures.html
+++ b/figures.html
@@ -51,7 +51,7 @@
         <div class="row">
             <div id="gallery1" class="gallery">
                 <a href="#modal1">
-                    <img src="../hci/images/aguinaldo.jpg" alt="Luna">
+                    <img src="images/aguinaldo.jpg" alt="Luna">
                 </a>
                 <div class="description">
                     <h3>Emilio Aguinaldo</h3>
@@ -61,7 +61,7 @@
             
             <div class="gallery">
                 <a href="#modal2">
-                    <img src="../hci/images/quezon.jpg" alt="Aquino">
+                    <img src="images/quezon.jpg" alt="Aquino">
                 </a>
                 <div class="description">
                     <h3>Manuel L. Quezon</h3>
